# advent-of-code

./: .gitignore  README.md
2018/rust/day-01/: Cargo.toml  test-input-1.txt
2020/rust/day-00/: Cargo.toml
2020/rust/day-01/: Cargo.toml
2021/rust/day-01/: Cargo.toml
2022/rust/day-00/: Cargo.toml
2022/rust/day-03/: Cargo.toml
2022/rust/day-13/: Cargo.toml
2023/rust/day-10/: Cargo.toml
2023/rust/day-12/: Cargo.toml
2024/rust/day-00/: Cargo.toml
2024/rust/day-01/: Cargo.toml
2024/rust/day-02/: Cargo.toml
2024/rust/day-03/: Cargo.toml
2024/rust/day-04/: Cargo.toml  test-input--1.txt  test-input--6.txt  test-input-4.txt  test-input-5.txt  test-input-6.txt  test-input-7.txt
2024/rust/day-05/: Cargo.toml
2024/rust/day-06/: Cargo.toml
2024/rust/day-07/: Cargo.toml
2024/rust/day-08/: Cargo.toml  test-input-10.txt  test-input-2.txt  test-input-3.txt  test-input-5.txt  test-input-6.txt  test-input-7.txt  test-input-8.txt  test-input-9.txt
2024/rust/day-09/: Cargo.toml
2024/rust/day-10/: Cargo.toml
2024/rust/day-11/: Cargo.toml
2024/rust/day-12/: Cargo.toml
2024/rust/day-13/: Cargo.toml
2024/rust/day-14/: Cargo.toml
2024/rust/day-15/: Cargo.toml
2024/rust/day-16/: Cargo.toml
2024/rust/day-17/: Cargo.toml  input-asm.txt
2024/rust/day-18/: Cargo.toml
2024/rust/day-19/: Cargo.toml
2024/rust/day-20/: Cargo.toml
2024/rust/day-21/: Cargo.toml
2025/rust/day-05/: Cargo.toml
2025/rust/day-05/benches/: benchmarks.rs
2025/rust/day-05/src/: lib.rs
2025/rust/day-08/: Cargo.toml
2025/rust/day-08/src/: lib.rs
(+106 files in other folders)
