[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rangemap = "1.2.3"

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "day-05-bench"
path = "benches/benchmarks.rs"
harness = false