[package]
name = "day-08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kd-tree = { version = "0.6.2", features = ["rayon"] }
typenum = "1.19.0"

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "day-08-bench"
path = "benches/benchmarks.rs"
harness = false
